# futsal-be

./: CMakeLists.txt  CMakeSettings.json
FutsalBe/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
FutsalBe/src/db/: Connector.cpp  Connector.hpp  TableCreator.cpp  TableCreator.hpp
FutsalBe/src/player/: Player.cpp  Player.hpp  PlayerRepository.cpp  PlayerRepository.hpp
